<resources>
    <string name="app_name">Impacta</string>
    <string name="required_field">Este campo deve ser preenchido</string>
    <string name="ra">RA</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="semestre">Semestre</string>
    <string name="visualizar">Visualizar</string>
    <string name="materia">Materia</string>
    <string name="professor">Professor</string>
    <string name="dia">Day</string>
    <string name="home">Home</string>
    <string name="grades">Notas</string>
    <string name="schedule">Horário</string>
    <string name="card">Cartão</string>
    <string name="home_name">Olá, aluno</string>
    <string name="home_course">Hoje suas aulas em curso são:</string>
    <string name="title_semester">Semestre</string>
    <string name="view">Visualizar</string>
    <string name="without_class">Você não tem aulas hoje</string>
    <string name="about">Sobre</string>
    <string name="impossible_game">Impossible Game</string>
    <string name="retry_button_text">Retry</string>
    <string name="faculdade">Faculdade Impacta Tecnologia</string>
    <string name="developers">Aplicativo não oficial desenvolvido por alunos</string>
    <string name="logout">Logout</string>
</resources>
